namespace El3edda.Data.Enums
{
    public enum OSEnum:byte
    {
        Android, IOS
    }
}
