namespace El3edda.Data.Enums
{
    public enum ScreenEnum
    {
        AMOLED, IPS, OLED, SuperAMOLED, LiquidRetina
    }
}
