namespace El3edda.Data.PaymentSettings
{
    public class PayPalSettings
    {
        public string ClientID { get; set; }
    }
}
